2004-06-13  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS: updated and reformatted.

2004-06-13  Masao Mutoh  <mutoh@highway.ne.jp>

	* po/ja.po:

	New Japanese translation.

2004-06-12  Dafydd Harries  <daf@muse.19inch.net>

	* po/cy.po:

	New Welsh translation.

2004-06-11  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Update the title when the selected library has been renamed.

2004-06-10  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS:

	Updated for the future 0.2.0 release.

2004-06-08  Laurent Sansonetti  <lrz@gnome.org>

	* README:

	- Corrected the name of the ruby-gettext project ;
	- Fixed the required GNOME version to 2.6.

	* data/alexandria/glade/main_app.glade:

	Removed some tooltips.

	* lib/alexandria.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/preferences_dialog.rb:

	Marked a few strings to be translated.

	* po/fr.po:

	Updated.

2004-06-07  Laurent Sansonetti  <lrz@gnome.org>

	Introduced i18n.  Almost all the investigation has been made by
	Dafydd.

	* pre-setup.rb,
	  po/fr.po,
	  po/genpot.sh:

	Added.

	* data/alexandria/glade/info_book_dialog.glade,
	  data/alexandria/glade/main_app.glade:

	Empted strings that shouldn't be translated. 

	* bin/alexandria,
	  lib/alexandria.rb,
	  lib/alexandria/book.rb,
	  lib/alexandria/ui/about_dialog.rb,
	  lib/alexandria/ui/glade_base.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog.rb:
	  
	Localised strings using Ruby/GetText.

2004-06-06  Laurent Sansonetti  <lrz@gnome.org>
	
	* schemas/alexandria.schemas,
	  post-install.rb:
	
	Added.  GConf2 schemas have been introduced.

	* lib/alexandria/ui/main_app.rb:

	Refactored the code since GConf preferences have now default values.  

2004-06-05  Laurent Sansonetti  <lrz@gnome.org>

	* bin/alexandria:

	Prints the release version upon exceptions.

	* data/alexandria/glade/main_app.glade,
	  lib/alexandria/ui/main_app.rb:
