@@ -1,5 +1,11 @@
 2004-06-13  Laurent Sansonetti  <lrz@gnome.org>
 
+	* lib/alexandria.rb,
+	  lib/alexandria/book.rb:
+
+	- extend the GetText module (thanks to Masao Mutoh) ;
+	- added translator names for the about box.
+
 	* AUTHORS: updated and reformatted.
 
 2004-06-13  Masao Mutoh  <mutoh@highway.ne.jp>
